# Go

./: .gitignore  CMakeLists.txt  Go.sln  README.md
Debug/: Go.ilk
Debug/Assets/: blackplayer.tga  whitedash.tga  whitedash1.tga  whitedot.tga  whitestar.tga
Edit/: Actor.cpp  Actor.h
Go/: Actor.cpp  GameConstants.h  GameController.cpp  Go.vcxproj  Go.vcxproj.filters  StudentWorld.h  field.txt  field1.txt  main.cpp
Go/Debug/: vc140.idb
Go/Debug/Go.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Go.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Go/Edit/: StudentWorld.cpp  StudentWorld.h
Go/Release/Go.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Go.lastbuildstate  Go.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: Go.iobj  Go.ipdb
Release/Assets/: whiteplayer.tga
inc/: Actor.h  GameController.h  GameWorld.h  SoundFX.h
src/: GameController.cpp  GameWorld.cpp  StudentWorld.cpp  main.cpp
